fixed responsive layouts

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,10 +14,10 @@ Create a button in `index.handlebars` that will submit the user input into the d
             <button type="submit" class="btn btn-warning mb-2">Add</button>
             </form>
             <div class = "row">
-                <div class = "col-6"> 
+                <div class = "col-12 col-sm-6"> 
                      {{>wannaGoCard}}
                 </div>
-                 <div class = "col-6"> 
+                 <div class = "col-12 col-sm-6"> 
                      {{>visited}}
                 </div>
 
