--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@ Create a button in `index.handlebars` that will submit the user input into the d
             <div class="form-group mx-sm-3 mb-2">
                 <input  type="text" class="form-control" id="input" placeholder="Enter Destination">
             </div>
-            <button type="submit" class="btn btn-warning mb-2">Add</button>
+            <button type="submit" class="btn btn-warning mb-2" id="add">Add</button>
             </form>
             <div class = "row">
                 <div class = "col-12 col-sm-6"> 
