add visit button ajax click

--- a/views/partials/visited.handlebars
+++ b/views/partials/visited.handlebars
@@ -1,11 +1,11 @@
- <div class="card wannaGoCard">
+ <div class="card visitedCard">
     
       <div class="card-body">
         <h5 class="card-title">Visited!</h5>
        <ul>
-    {{!-- {{#each places}}
+    {{#each visitedPlaces}}
         <li>{{title}}</li>
-    {{/each}} --}}
+    {{/each}}
 </ul>
   <img src="./assets/img/travel2.jpg" class="card-img-top" alt="travel">
       </div>
