--- a/views/partials/wannaGoCard.handlebars
+++ b/views/partials/wannaGoCard.handlebars
@@ -3,7 +3,7 @@
       <div class="card-body">
         <h5 class="card-title">Wanna Go!</h5>
        <ul>
-    {{#each places}}
+    {{#each wannaGoPlaces}}
         <li>{{title}}
             <button class='btn btn-outline-warning visit' data-id='{{id}}'>visit</button>
         </li>
